--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -484,15 +484,15 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="#"><img src="assets/images/speaker/speaker-6.jpg" alt="Speaker"></a>
+                                            <a href="#"><img src="assets/images/speaker/shan.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
-                                        <p class="speaker-designation">Lead Speaker</p>
+                                        <h4 class="speaker-name"><a href="#">Shan Liu</a></h4>
+                                        <p class="speaker-designation">Head of Investors Relation</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
@@ -1018,6 +1018,7 @@
             <ul>
                 <a href="https://altcointurk.com/"> <li>  <img src="assets/images/altcointurk.png" alt=""> <img src="assets/images/altcointurk.png" alt=""> </li></a>
                 <a href="https://0xwilds.com/"> <li>  <img src="assets/images/0xwilds.png" alt=""> <img src="assets/images/0xwilds.png" alt=""> </li></a>
+                <a href="https://evox.dev/"> <li>  <img src="assets/images/evox.png" alt=""> <img src="assets/images/evox.png" alt=""> </li></a>
                 <a href="https://twitter.com/univechain"> <li>  <img src="assets/images/univechain.png" alt=""> <img src="assets/images/univechain.png" alt=""> </li></a>
                 <a href="https://www.cryptofemale.org/"> <li>  <img src="assets/images/cryptoFemale.png" alt=""> <img src="assets/images/cryptoFemale.png" alt=""> </li></a>
                 <a href="https://www.patika.dev/tr"> <li>  <img src="assets/images/patikadev.png" alt=""> <img src="assets/images/patikadev.png" alt=""> </li></a>
