--- a/ABSummit/about.html
+++ b/ABSummit/about.html
@@ -701,17 +701,17 @@
         <!-- Gallery End -->
 
         <!-- Event Sponsors Start -->
-        <div class="meeta-event-sponsors-2 section-padding" style="background-image: url(assets/images/bg/sponsor-bg-2.png);">
-            <div class="container">
+        <!-- <div class="meeta-event-sponsors-2 section-padding" style="background-image: url(assets/images/bg/sponsor-bg-2.png);">
+            <div class="container"> -->
 
                 <!-- Section Title Start -->
-                <div class="meeta-section-title-2 text-center">
+                <!-- <div class="meeta-section-title-2 text-center">
                     <h2 class="main-title">Event Sponsors</h2>
-                </div>
+                </div> -->
                 <!-- Section Title End -->
 
                 <!-- Sponsor Active Start -->
-                <div class="meeta-sponsor-active">
+                <!-- <div class="meeta-sponsor-active">
                     <div class="swiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
@@ -736,11 +736,11 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Sponsor Active End -->
 
-            </div>
-        </div>
+            <!-- </div>
+        </div> -->
         <!-- Event Sponsors End -->
 
 
