--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -448,7 +448,7 @@
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">Serkan Bilen</a></h4>
+                                        <h4 class="speaker-name"><a href="https://twitter.com/s3rkanbil3n">Serkan Bilen</a></h4>
                                         <p class="speaker-designation">Founder of DATS Project </p>
                                     </div>
                                 </div>
@@ -469,7 +469,7 @@
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">Oğuz Evren Kılıç</a></h4>
+                                        <h4 class="speaker-name"><a href="https://twitter.com/OguzEvrenKilic">Oğuz Evren Kılıç</a></h4>
 
                                         <p class="speaker-designation">Chairman of the Blockchain and Crypto Asset Association</p>
                                     </div>
@@ -505,15 +505,15 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="speaker-single.html"><img src="assets/images/speaker/speaker-4.jpg" alt="Speaker"></a>
+                                            <a href="https://twitter.com/barisbuyuktas"><img src="assets/images/speaker/barışBüyüktaş.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
-                                        <p class="speaker-designation">Lead Speaker</p>
+                                        <h4 class="speaker-name"><a href="https://twitter.com/barisbuyuktas">Barış Büyüktaş</a></h4>
+                                        <p class="speaker-designation">Founder of Evox</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
