--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -534,7 +534,7 @@
                                     </div>
                                     <div class="speaker-content">
                                         <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
-                                        <p class="speaker-designation">Developer</p>
+                                        <p class="speaker-designation">Coming Soon</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
@@ -555,7 +555,7 @@
                                     </div>
                                     <div class="speaker-content">
                                         <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
-                                        <p class="speaker-designation">Graphic Designer</p>
+                                        <p class="speaker-designation">Coming Soon</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
@@ -599,7 +599,7 @@
                                     </div>
                                     <div class="speaker-content">
                                         <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
-                                        <p class="speaker-designation">Graphic Designer</p>
+                                        <p class="speaker-designation">Coming Soon</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
@@ -621,7 +621,7 @@
                                     </div>
                                     <div class="speaker-content">
                                         <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
-                                        <p class="speaker-designation">Graphic Designer</p>
+                                        <p class="speaker-designation">Coming Soon</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
