web3dernegi added

--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1087,6 +1087,7 @@
             <ul>
                 <a href="https://altcointurk.com/"> <li>  <img src="assets/images/altcointurk.png" alt=""> <img src="assets/images/altcointurk.png" alt=""> </li></a>
                 <a href="https://0xwilds.com/"> <li>  <img src="assets/images/0xwilds.png" alt=""> <img src="assets/images/0xwilds.png" alt=""> </li></a>
+                <a href="https://twitter.com/web3dernegi"> <li>  <img src="assets/images/web3dernegi.jpg" alt=""> <img src="assets/images/web3dernegi.jpg" alt=""> </li></a>
                 <a href="https://evox.dev/"> <li>  <img src="assets/images/evox.png" alt=""> <img src="assets/images/evox.png" alt=""> </li></a>
                 <a href="https://twitter.com/univechain"> <li>  <img src="assets/images/univechain.png" alt=""> <img src="assets/images/univechain.png" alt=""> </li></a>
                 <a href="https://www.cryptofemale.org/"> <li>  <img src="assets/images/cryptoFemale.png" alt=""> <img src="assets/images/cryptoFemale.png" alt=""> </li></a>
