--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -569,15 +569,15 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="#"><img src="assets/images/speaker/speaker-6.jpg" alt="Speaker"></a>
+                                            <a href="#"><img src="assets/images/speaker/bulent-blut.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
-                                        <p class="speaker-designation">Coming Soon</p>
+                                        <h4 class="speaker-name"><a href="#">Bülent Bulut</a></h4>
+                                        <p class="speaker-designation">CEO of SHAAR</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
