--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -109,7 +109,7 @@
                         <div class="header-meta">
 
                             <div class="header-btn d-none d-md-block">
-                                <a href="#" class="btn btn-primary">Register</a>
+                                <a href="https://www.eventbrite.com/e/anatolain-blockchain-meetup-20-tickets-471693537067" class="btn btn-primary">Register</a>
                             </div>
 
                             <!-- Header Toggle Start -->
@@ -257,7 +257,7 @@
                             <p class="text" data-aos-delay="700" data-aos="fade-up">December 17, Eskişehir, Türkiye</p>
                             <h2 class="title" data-aos-delay="800" data-aos="fade-up">Anatolian Blockchain <br>  <span>Meetup 2.0</span></h2>
                             <div class="header-btn" data-aos-delay="900" data-aos="fade-up">
-                                <a class="btn-2" href="#">Register Now</a>
+                                <a class="btn-2" href="https://www.eventbrite.com/e/anatolain-blockchain-meetup-20-tickets-471693537067">Register Now</a>
                             </div>
                         </div>
                     </div>
@@ -985,7 +985,7 @@
                                     <li>Right To Participate In Prize Draws</li>
                                     <li>Custom Card Holders With Your Name</li>
                                 </ul>
-                                <a class="btn " href="#">Book A Seat</a>
+                                <a class="btn " href="https://www.eventbrite.com/e/anatolain-blockchain-meetup-20-tickets-471693537067">Book A Seat</a>
                             </div>
                         </div>
                         <!-- Single Pricing End -->
