--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -526,14 +526,14 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="#"><img src="assets/images/speaker/volkan-korkmaz-2.jpg" alt="Speaker"></a>
+                                            <a href="https://twitter.com/vkorkmaz10"><img src="assets/images/speaker/volkan-korkmaz-2.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">Volkan Korkmaz</a></h4>
+                                        <h4 class="speaker-name"><a href="https://twitter.com/vkorkmaz10">Volkan Korkmaz</a></h4>
                                         <p class="speaker-designation">CEO of Altcointurk</p>
                                     </div>
                                 </div>
@@ -547,14 +547,14 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="#"><img src="assets/images/speaker/idildadan.jpg" alt="Speaker"></a>
+                                            <a href="https://twitter.com/idildadan"><img src="assets/images/speaker/idildadan.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">İdil Dadan</a></h4>
+                                        <h4 class="speaker-name"><a href="https://twitter.com/idildadan">İdil Dadan</a></h4>
                                         <p class="speaker-designation">Growth Manager at Altcointurk</p>
                                     </div>
                                 </div>
