--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1128,7 +1128,7 @@
                 <a href="https://m1nxnightclub.com/"> <li>  <img src="assets/images/m1nx.jpeg" alt=""> <img src="assets/images/m1nx.jpeg" alt=""> </li></a>
                 <a href="https://www.twitter.com/ostimblockchain/"> <li>  <img src="assets/images/osbirteknik.jpg" alt=""> <img src="assets/images/osbirteknik.jpg" alt=""> </li></a>
                 <a href="https://www.bkvd.org.tr/"> <li>  <img src="assets/images/blokzincirveKriptoVarlık.jpg" alt=""> <img src="assets/images/blokzincirveKriptoVarlık.jpg" alt=""> </li></a>
-             
+                <a href="https://twitter.com/GaziBlockchain"> <li>  <img src="assets/images/gaziblockchain.jpeg" alt=""> <img src="assets/images/gaziblockchain.jpeg" alt=""> </li></a>
               
             </ul>
           </div>
