--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1087,8 +1087,9 @@
             <ul>
                 <a href="https://altcointurk.com/"> <li>  <img src="assets/images/altcointurk.png" alt=""> <img src="assets/images/altcointurk.png" alt=""> </li></a>
                 <a href="https://0xwilds.com/"> <li>  <img src="assets/images/0xwilds.png" alt=""> <img src="assets/images/0xwilds.png" alt=""> </li></a>
-                <a href="https://chain.link/"> <li>  <img src="assets/images/chainlink.jpeg" alt=""> <img src="assets/images/chainlink.jpeg" alt=""> </li></a>
+                <a href="https://twitter.com/ethistanbul"> <li>  <img src="assets/images/ethistanbul.jpg" alt=""> <img src="assets/images/ethistanbul.jpg" alt=""> </li></a>
                 <a href="https://twitter.com/web3dernegi"> <li>  <img src="assets/images/web3dernegi.jpg" alt=""> <img src="assets/images/web3dernegi.jpg" alt=""> </li></a>
+                <a href="https://chain.link/"> <li>  <img src="assets/images/chainlink.jpeg" alt=""> <img src="assets/images/chainlink.jpeg" alt=""> </li></a>
                 <a href="https://evox.dev/"> <li>  <img src="assets/images/evox.png" alt=""> <img src="assets/images/evox.png" alt=""> </li></a>
                 <a href="https://twitter.com/univechain"> <li>  <img src="assets/images/univechain.png" alt=""> <img src="assets/images/univechain.png" alt=""> </li></a>
                 <a href="https://www.cryptofemale.org/"> <li>  <img src="assets/images/cryptoFemale.png" alt=""> <img src="assets/images/cryptoFemale.png" alt=""> </li></a>
