--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -591,15 +591,15 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="#"><img src="assets/images/speaker/speaker-6.jpg" alt="Speaker"></a>
+                                            <a href="#"><img src="assets/images/speaker/ekrem.png" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
-                                        <p class="speaker-designation">Coming Soon</p>
+                                        <h4 class="speaker-name"><a href="#">Ekrem Örünğ</a></h4>
+                                        <p class="speaker-designation">CH of LBankTurkey</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
@@ -1072,6 +1072,7 @@
                 <a href="https://lbank.com/"> <li>  <img src="assets/images/lbank.png" alt=""> <img src="assets/images/lbank.png" alt=""> </li></a>
                 <a href="https://www.youtube.com/@kriptokurdu"> <li>  <img src="assets/images/kriptoKurdu.png" alt=""> <img src="assets/images/kriptoKurdu.png" alt=""> </li></a>
                 <a href="https://stabit.ae/"> <li>  <img src="assets/images/stabit.svg" alt=""> <img src="assets/images/stabit.svg" alt=""> </li></a>
+                <!-- <a href="https://www.mamoru.com.tr/"> <li>  <img src="assets/images/mamoru.jpeg" alt=""> <img src="assets/images/mamoru.jpeg" alt=""> </li></a> -->
               <!-- <li> <img src="assets/images/2.png" alt=""> <img src="assets/images/2-2.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="images/3-3.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="assets/images/3.png" alt=""> </li>
@@ -1091,6 +1092,7 @@
                 <a href="https://twitter.com/web3dernegi"> <li>  <img src="assets/images/web3dernegi.jpg" alt=""> <img src="assets/images/web3dernegi.jpg" alt=""> </li></a>
                 <a href="https://chain.link/"> <li>  <img src="assets/images/chainlink.jpeg" alt=""> <img src="assets/images/chainlink.jpeg" alt=""> </li></a>
                 <a href="https://evox.dev/"> <li>  <img src="assets/images/evox.png" alt=""> <img src="assets/images/evox.png" alt=""> </li></a>
+                <a href="https://nftsummit.ist/"> <li>  <img src="assets/images/NFTSummit.png" alt=""> <img src="assets/images/NFTSummit.png" alt=""> </li></a>
                 <a href="https://twitter.com/univechain"> <li>  <img src="assets/images/univechain.png" alt=""> <img src="assets/images/univechain.png" alt=""> </li></a>
                 <a href="https://www.cryptofemale.org/"> <li>  <img src="assets/images/cryptoFemale.png" alt=""> <img src="assets/images/cryptoFemale.png" alt=""> </li></a>
                 <a href="https://www.patika.dev/tr"> <li>  <img src="assets/images/patikadev.png" alt=""> <img src="assets/images/patikadev.png" alt=""> </li></a>
