--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1072,7 +1072,7 @@
                 <a href="https://lbank.com/"> <li>  <img src="assets/images/lbank.png" alt=""> <img src="assets/images/lbank.png" alt=""> </li></a>
                 <a href="https://www.youtube.com/@kriptokurdu"> <li>  <img src="assets/images/kriptoKurdu.png" alt=""> <img src="assets/images/kriptoKurdu.png" alt=""> </li></a>
                 <a href="https://stabit.ae/"> <li>  <img src="assets/images/stabit.svg" alt=""> <img src="assets/images/stabit.svg" alt=""> </li></a>
-                <!-- <a href="https://www.mamoru.com.tr/"> <li>  <img src="assets/images/mamoru.jpeg" alt=""> <img src="assets/images/mamoru.jpeg" alt=""> </li></a> -->
+                <a href="https://www.mamoru.com.tr/"> <li>  <img src="assets/images/mamoru.jpeg" alt=""> <img src="assets/images/mamoru.jpeg" alt=""> </li></a>
               <!-- <li> <img src="assets/images/2.png" alt=""> <img src="assets/images/2-2.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="images/3-3.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="assets/images/3.png" alt=""> </li>
