--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -613,15 +613,15 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="#"><img src="assets/images/speaker/speaker-6.jpg" alt="Speaker"></a>
+                                            <a href="https://twitter.com/zecenazaltinok"><img src="assets/images/speaker/ecenaz .png" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
-                                        <p class="speaker-designation">Coming Soon</p>
+                                        <h4 class="speaker-name"><a href="https://www.linkedin.com/in/ecenazaltinok/">Zeynep Ecenaz Altınok</a></h4>
+                                        <p class="speaker-designation">Marketing Specialist at CoinTR</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
@@ -1071,8 +1071,9 @@
                 <a href="https://datsproject.io/"> <li>  <img src="assets/images/datsp.jpg" alt=""> <img src="assets/images/datsp.jpg" alt=""> </li></a>
                 <a href="https://lbank.com/"> <li>  <img src="assets/images/lbank.png" alt=""> <img src="assets/images/lbank.png" alt=""> </li></a>
                 <a href="https://www.youtube.com/@kriptokurdu"> <li>  <img src="assets/images/kriptoKurdu.png" alt=""> <img src="assets/images/kriptoKurdu.png" alt=""> </li></a>
+                <a href="https://www.mamoru.com.tr/"> <li>  <img src="assets/images/mamoru.jpeg" alt=""> <img src="assets/images/mamoru.jpeg" alt=""> </li></a> 
+                <!-- <a href="https://www.cointr.pro/tr-tr"> <li>  <img src="assets/images/CoinTR.png" alt=""> <img src="assets/images/CoinTR.png" alt=""> </li></a> -->
                 <a href="https://stabit.ae/"> <li>  <img src="assets/images/stabit.svg" alt=""> <img src="assets/images/stabit.svg" alt=""> </li></a>
-                <a href="https://www.mamoru.com.tr/"> <li>  <img src="assets/images/mamoru.jpeg" alt=""> <img src="assets/images/mamoru.jpeg" alt=""> </li></a>
               <!-- <li> <img src="assets/images/2.png" alt=""> <img src="assets/images/2-2.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="images/3-3.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="assets/images/3.png" alt=""> </li>
