--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1141,7 +1141,7 @@
                 <a href="https://twitter.com/HkuBlokZinciri"> <li>  <img src="assets/images/hkü.png" alt=""> <img src="assets/images/hkü.png" alt=""> </li></a>
                 <a href="#"> <li>  <img src="assets/images/gdscUskudar.png" alt=""> <img src="assets/images/gdscUskudar.png" alt=""> </li></a>
                 <a href="https://twitter.com/Comuchain"> <li>  <img src="assets/images/Çanakkale Blockchain.png" alt=""> <img src="assets/images/Çanakkale Blockchain.png" alt=""> </li></a>
-              
+                <a href="https://twitter.com/bakirchain"> <li>  <img src="assets/images/bakırchain.jpeg" alt=""> <img src="assets/images/bakırchain.jpeg" alt=""> </li></a>
             </ul>
           </div>
           
