--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1136,7 +1136,7 @@
                 <a href="https://twitter.com/GaziBlockchain"> <li>  <img src="assets/images/gaziblockchain.jpeg" alt=""> <img src="assets/images/gaziblockchain.jpeg" alt=""> </li></a>
                 <a href="https://twitter.com/cukurovablock"> <li>  <img src="assets/images/Çukurova Blockchain PNG Logo.png" alt=""> <img src="assets/images/Çukurova Blockchain PNG Logo.png" alt=""> </li></a>
                 <a href="https://twitter.com/yu_blockchain"> <li>  <img src="assets/images/yaşarBlockchain.jpeg" alt=""> <img src="assets/images/yaşarBlockchain.jpeg" alt=""> </li></a>
-                <a href="#"> <li>  <img src="assets/images/üsküdarBlockchain.png" alt=""> <img src="assets/images/üsküdarBlockchain.png" alt=""> </li></a>
+                <a href="#"> <li>  <img src="assets/images/üsküdarBlockchain.jpg" alt=""> <img src="assets/images/üsküdarBlockchain.jpg" alt=""> </li></a>
                 <a href="https://blockchainexpoworld.com/"> <li>  <img src="assets/images/expoWorld.png" alt=""> <img src="assets/images/expoWorld.png" alt=""> </li></a>
                 <a href="https://twitter.com/HkuBlokZinciri"> <li>  <img src="assets/images/hkü.png" alt=""> <img src="assets/images/hkü.png" alt=""> </li></a>
                 <a href="#"> <li>  <img src="assets/images/gdscUskudar.png" alt=""> <img src="assets/images/gdscUskudar.png" alt=""> </li></a>
