--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1142,6 +1142,7 @@
                 <a href="#"> <li>  <img src="assets/images/gdscUskudar.png" alt=""> <img src="assets/images/gdscUskudar.png" alt=""> </li></a>
                 <a href="https://twitter.com/Comuchain"> <li>  <img src="assets/images/Çanakkale Blockchain.png" alt=""> <img src="assets/images/Çanakkale Blockchain.png" alt=""> </li></a>
                 <a href="https://twitter.com/bakirchain"> <li>  <img src="assets/images/bakırchain.jpeg" alt=""> <img src="assets/images/bakırchain.jpeg" alt=""> </li></a>
+                <a href="https://twitter.com/baskentchain"> <li>  <img src="assets/images/başkentBlockchain.png" alt=""> <img src="assets/images/başkentBlockchain.png" alt=""> </li></a>
             </ul>
           </div>
           
