--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1109,7 +1109,7 @@
                 <a href="https://btchaber.com/"> <li>  <img src="assets/images/btc-haber.png" alt=""> <img src="assets/images/btc-haber.png" alt=""> </li></a>
                 <a href="https://coinkolik.com/"> <li>  <img src="assets/images/coinkolik.png" alt=""> <img src="assets/images/coinkolik.png" alt=""> </li></a> -->
                 <a href="https://tr.beincrypto.com/"> <li>  <img src="assets/images/beinc-3.png" alt=""> <img src="assets/images/beinc-3.png" alt=""> </li></a>
-                <a href="https://coinotag.com/"> <li>  <img src="assets/images/CO - Black.png" alt=""> <img src="assets/images/CO - Black.png" alt=""> </li></a>
+                <!-- <a href="https://coinotag.com/"> <li>  <img src="assets/images/CO - Black.png" alt=""> <img src="assets/images/CO - Black.png" alt=""> </li></a> -->
                 <a href="https://muhabbit.com/"> <li>  <img src="assets/images/muhabbit.png" alt=""> <img src="assets/images/muhabbit.png" alt=""> </li></a>
                 <a href="https://kriptokoin.com/"> <li>  <img src="assets/images/kriptokoin.png" alt=""> <img src="assets/images/kriptokoin.png" alt=""> </li></a>
                 <a href="https://kriptoarena.com/"> <li>  <img src="assets/images/KriptoArena.png" alt=""> <img src="assets/images/KriptoArena.png" alt=""> </li></a>
