--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -635,14 +635,14 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="https://twitter.com/zecenazaltinok"><img src="assets/images/speaker/Arda Nakışçı.jpg" alt="Speaker"></a>
+                                            <a href="https://www.linkedin.com/in/arda-nakisci/"><img src="assets/images/speaker/Arda Nakışçı.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="https://www.linkedin.com/in/ecenazaltinok/">Arda Nakışçı</a></h4>
+                                        <h4 class="speaker-name"><a href="https://www.linkedin.com/in/arda-nakisci/">Arda Nakışçı</a></h4>
                                         <p class="speaker-designation">Smart contract and full-stack developer at Cosmos Ecosystem</p>
                                     </div>
                                 </div>
@@ -657,14 +657,14 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="https://twitter.com/zecenazaltinok"><img src="assets/images/speaker/Arda Onat Kaboğlu.jpg" alt="Speaker"></a>
+                                            <a href="#"><img src="assets/images/speaker/Arda Onat Kaboğlu.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="https://www.linkedin.com/in/ecenazaltinok/">Arda Onat Kaboğlu</a></h4>
+                                        <h4 class="speaker-name"><a href="#">Arda Onat Kaboğlu</a></h4>
                                         <p class="speaker-designation">Researcher & Product Manager at Cosmos Ecosystem</p>
                                     </div>
                                 </div>
@@ -681,15 +681,15 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="https://twitter.com/zecenazaltinok"><img src="assets/images/speaker/Kutay Kaygısızlar.jpg" alt="Speaker"></a>
+                                            <a href="https://www.linkedin.com/in/kutay-kayg%C4%B1s%C4%B1zlar-1b09b513a/"><img src="assets/images/speaker/Kutay Kaygısızlar.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="https://www.linkedin.com/in/ecenazaltinok/">Kutay Kaygısızlar</a></h4>
-                                        <p class="speaker-designation"></p>
+                                        <h4 class="speaker-name"><a href="https://www.linkedin.com/in/kutay-kayg%C4%B1s%C4%B1zlar-1b09b513a/">Kutay Kaygısızlar</a></h4>
+                                        <p class="speaker-designation">Co-founder of Tappir</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
