--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -664,7 +664,7 @@
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">Arda Onat Kaboğlu</a></h4>
+                                        <h4 class="speaker-name"><a href="#">Ata Onat Kaboğlu</a></h4>
                                         <p class="speaker-designation">Researcher & Product Manager at Cosmos Ecosystem</p>
                                     </div>
                                 </div>
