--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -657,14 +657,14 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="#"><img src="assets/images/speaker/Arda Onat Kaboğlu.jpg" alt="Speaker"></a>
+                                            <a href="https://www.linkedin.com/in/ata-onat-kabo%C4%9Flu-114283150/"><img src="assets/images/speaker/Arda Onat Kaboğlu.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">Ata Onat Kaboğlu</a></h4>
+                                        <h4 class="speaker-name"><a href="https://www.linkedin.com/in/ata-onat-kabo%C4%9Flu-114283150/">Ata Onat Kaboğlu</a></h4>
                                         <p class="speaker-designation">Researcher & Product Manager at Cosmos Ecosystem</p>
                                     </div>
                                 </div>
