new media added

--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1197,6 +1197,8 @@
                 <!-- <a href="https://tr.cointelegraph.com/"> <li>  <img src="assets/images/coinTelegraph.jpeg" alt=""> <img src="assets/images/coinTelegraph.jpeg" alt=""> </li></a>
                 <a href="https://btchaber.com/"> <li>  <img src="assets/images/btc-haber.png" alt=""> <img src="assets/images/btc-haber.png" alt=""> </li></a>
                 <a href="https://coinkolik.com/"> <li>  <img src="assets/images/coinkolik.png" alt=""> <img src="assets/images/coinkolik.png" alt=""> </li></a> -->
+                <a href="https://coinkolik.com/"> <li>  <img src="assets/images/coinkolik-turuncu.png" alt=""> <img src="assets/images/coinkolik-turuncu.png" alt=""> </li></a>
+                <a href="https://www.coinbilgi.net/"> <li>  <img src="assets/images/coinbilgi-siyah.png" alt=""> <img src="assets/images/coinbilgi-siyah.png" alt=""> </li></a>
                 <a href="https://tr.beincrypto.com/"> <li>  <img src="assets/images/beinc-3.png" alt=""> <img src="assets/images/beinc-3.png" alt=""> </li></a>
                 <!-- <a href="https://coinotag.com/"> <li>  <img src="assets/images/CO - Black.png" alt=""> <img src="assets/images/CO - Black.png" alt=""> </li></a> -->
                 <a href="https://muhabbit.com/"> <li>  <img src="assets/images/muhabbit.png" alt=""> <img src="assets/images/muhabbit.png" alt=""> </li></a>
