--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1161,6 +1161,7 @@
                 <a href="https://lbank.com/"> <li>  <img src="assets/images/lbank.png" alt=""> <img src="assets/images/lbank.png" alt=""> </li></a>
                 <a href="https://www.youtube.com/@kriptokurdu"> <li>  <img src="assets/images/kriptoKurdu.png" alt=""> <img src="assets/images/kriptoKurdu.png" alt=""> </li></a>
                 <a href="https://www.cointr.pro/tr-tr"> <li>  <img src="assets/images/CoinTR.png" alt=""> <img src="assets/images/CoinTR.png" alt=""> </li></a>
+                <a href="https://venus.io/"> <li>  <img src="assets/images/venus.png" alt=""> <img src="assets/images/venus.png" alt=""> </li></a>
                 <a href="https://www.mamoru.com.tr/"> <li>  <img src="assets/images/mamoru.png" alt=""> <img src="assets/images/mamoru.png" alt=""> </li></a> 
                 <a href="https://stabit.ae/"> <li>  <img src="assets/images/stabit.svg" alt=""> <img src="assets/images/stabit.svg" alt=""> </li></a>
               <!-- <li> <img src="assets/images/2.png" alt=""> <img src="assets/images/2-2.png" alt=""> </li>
