--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1235,6 +1235,7 @@
                 <a href="https://twitter.com/bakirchain"> <li>  <img src="assets/images/bakırchain.jpeg" alt=""> <img src="assets/images/bakırchain.jpeg" alt=""> </li></a>
                 <a href="https://twitter.com/baskentchain"> <li>  <img src="assets/images/başkentBlockchain.png" alt=""> <img src="assets/images/başkentBlockchain.png" alt=""> </li></a>
                 <a href="https://twitter.com/meblored"> <li>  <img src="assets/images/konya.jpeg" alt=""> <img src="assets/images/konya.jpeg" alt=""> </li></a>
+                <a href="https://twitter.com/ulublock"> <li>  <img src="assets/images/uludag.jpeg" alt=""> <img src="assets/images/uludag.jpeg" alt=""> </li></a>
             </ul>
           </div>
           
