--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -60,7 +60,8 @@
                     <div class="header-wrap">
                         <!-- Header Logo Start -->
                         <div class="header-logo">
-                            <a href="index.html"><img src="assets/images/cankaya-logo/logo.png" alt="Logo"></a>
+                            <!-- <a href="index.html"><img src="assets/images/cankaya-logo/logo.png" alt="Logo">Cankaya Blockchain</a> -->
+                            <a  href="index.html"> <h1 style="color: #fc097c;">Anatolian Blockchain</h1> </a>
                         </div>
                         <!-- Header Logo End -->
 
@@ -109,7 +110,7 @@
                         <div class="header-meta">
 
                             <div class="header-btn d-none d-md-block">
-                                <a href="https://www.eventbrite.com/e/anatolain-blockchain-meetup-20-tickets-471693537067" class="btn btn-primary">Register</a>
+                                <a href="#" class="btn btn-primary">Register</a>
                             </div>
 
                             <!-- Header Toggle Start -->
@@ -139,7 +140,7 @@
             <div class="icon-close"></div>
 
             <!-- Mini Cart Box Start -->
-            <div class="meeta-mini-cart-box">
+            <!-- <div class="meeta-mini-cart-box">
 
                 <div class="mini-cart-items">
 
@@ -185,7 +186,7 @@
                     <a class="btn btn-primary" href="#">View cart</a>
                     <a class="btn btn-white" href="#">Checkout</a>
                 </div>
-            </div>
+            </div> -->
             <!-- Mini Cart Box End -->
 
         </div>
@@ -254,10 +255,10 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="meeta-hero-content text-center">
-                            <p class="text" data-aos-delay="700" data-aos="fade-up">December 17, Eskişehir, Türkiye</p>
-                            <h2 class="title" data-aos-delay="800" data-aos="fade-up">Anatolian Blockchain <br>  <span>Meetup 2.0</span></h2>
+                            <p class="text" data-aos-delay="700" data-aos="fade-up">March,  Ankara, Türkiye</p>
+                            <h2 class="title" data-aos-delay="800" data-aos="fade-up">Anatolian Blockchain <br>  <span>Meetup 3.0</span></h2>
                             <div class="header-btn" data-aos-delay="900" data-aos="fade-up">
-                                <a class="btn-2" href="https://www.eventbrite.com/e/anatolain-blockchain-meetup-20-tickets-471693537067">Register Now</a>
+                                <a class="btn-2" href="#">Register Now</a>
                             </div>
                         </div>
                     </div>
@@ -427,7 +428,7 @@
                     <!-- Section Title Start -->
                     <div class="meeta-section-title-2 text-center">
                         <h4 class="sub-title">Speakers</h4>
-                        <h2 class="main-title text-white">World Class Speakers</h2>
+                        <h2 class="main-title text-white">Past Speakers</h2>
                     </div>
                     <!-- Section Title End -->
                     <div class="meeta-speakers-content-wrap-2">
@@ -1097,7 +1098,7 @@
                                     <li>Right To Participate In Prize Draws</li>
                                     <li>Custom Card Holders With Your Name</li>
                                 </ul>
-                                <a class="btn " href="https://www.eventbrite.com/e/anatolain-blockchain-meetup-20-tickets-471693537067">Book A Seat</a>
+                                <a class="btn " href="#">Book A Seat</a>
                             </div>
                         </div>
                         <!-- Single Pricing End -->
@@ -1177,7 +1178,7 @@
         <div id="Sponsors" class="our-clients">
             <br>
             <div class="meeta-section-title-2 text-center">
-                <h2 class="main-title">Event Sponsors</h2>
+                <h2 class="main-title">Past Event Sponsors</h2>
             </div>
             <ul>
                 <a href="https://datsproject.io/"> <li>  <img src="assets/images/datsp.jpg" alt=""> <img src="assets/images/datsp.jpg" alt=""> </li></a>
