--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -68,7 +68,12 @@
               <div class="header-logo">
                 <!-- <a href="index.html"><img src="assets/images/cankaya-logo/logo.png" alt="Logo">Cankaya Blockchain</a> -->
                 <a href="index.html">
-                  <h1 style="color: #fc097c">Anatolian Blockchain</h1>
+                  <!-- <h1 style="color: #fc097c">Anatolian Blockchain</h1> -->
+                  <img
+                    style="height: 110px; width: 110px"
+                    src="assets/images/ab-logo.png"
+                    alt=""
+                  />
                 </a>
               </div>
               <!-- Header Logo End -->
