--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -278,11 +278,11 @@
             <div class="col-lg-12">
               <div class="meeta-hero-content text-center">
                 <p class="text" data-aos-delay="700" data-aos="fade-up">
-                  April, Ankara, Türkiye
+                  22 August, İstanbul
                 </p>
                 <h2 class="title" data-aos-delay="800" data-aos="fade-up">
                   Anatolian Blockchain <br />
-                  <span>Meetup 3.0</span>
+                  <span>IBW Side Event</span>
                 </h2>
                 <div class="header-btn" data-aos-delay="900" data-aos="fade-up">
                   <a class="btn-2" href="#">Register Now</a>
@@ -332,8 +332,7 @@
                 <div class="meeta-section-title-2">
                   <h4 class="sub-title">About Event</h4>
                   <h2 class="main-title">
-                    The first blockchain event in the city that brings together
-                    all kinds of people from the ecosystem
+                    Anatolian Blockchain Crypto Connect
                   </h2>
                 </div>
                 <!-- Section Title End -->
@@ -341,11 +340,17 @@
                 <!-- About Content Start -->
                 <div class="meeta-about-content">
                   <p>
-                    Anatolian Blockchain Meetup comes to your city! 2nd of our
-                    Anatolian Blockchain Meetup will take place in Eskişehir on
-                    17th of December. It welcomes blockchain experts, c-level
-                    project managers, traders, students, entrepreneurs, and Web3
-                    enthusiasts together from all around the world.
+                    Anatolian Blockchain Crypto Connect is a special side event
+                    of Istanbul Blockchain Week. This event provides an
+                    opportunity for project owners, entrepreneurs, investors,
+                    and valuable individuals from the crypto ecosystem to come
+                    together and network. The event aims to offer an enjoyable
+                    experience with a dynamic program taking place from 7 pm to
+                    11 pm. Don't miss this opportunity to showcase your
+                    projects, meet investors, and expand your network. We bring
+                    the energy and excitement of Istanbul Blockchain Week to our
+                    side event! Don't miss out on this opportunity to directly
+                    interact with these experienced individuals!
                   </p>
 
                   <div class="about-list">
@@ -417,8 +422,8 @@
                 <!-- Single Counter Start -->
                 <div class="single-counter counter-item-1 text-center">
                   <div class="counter-text">
-                    <span class="counter">15</span>
-                    <p>Speakers</p>
+                    <span class="counter">25</span>
+                    <p>Blokchcain Company</p>
                   </div>
                 </div>
                 <!-- Single Counter End -->
@@ -427,7 +432,7 @@
                 <!-- Single Counter Start -->
                 <div class="single-counter counter-item-2 text-center">
                   <div class="counter-text">
-                    <span class="counter">500</span>
+                    <span class="counter">200</span>
                     <p>Attendence</p>
                   </div>
                 </div>
@@ -447,7 +452,7 @@
                 <!-- Single Counter Start -->
                 <div class="single-counter text-center">
                   <div class="counter-text">
-                    <span class="counter">8</span>
+                    <span class="counter">15</span>
                     <p>Community</p>
                   </div>
                 </div>
@@ -906,7 +911,7 @@
                   <li data-tab-target="#tab1" class="active">
                     <div class="meeta-event-schedule-time">
                       <h4 class="meeta-event-schedule-day">Day 1</h4>
-                      <p>December 17, 2022</p>
+                      <p>August 22, 2023</p>
                     </div>
                   </li>
                   <!-- <li data-tab-target="#tab2" class="tab">
@@ -941,7 +946,7 @@
                             <img src="assets/images/schedule-1.jpg" alt="" />
                           </div>
                           <div class="event-title">
-                            <span class="time">09 AM - 11 AM</span>
+                            <span class="time">07 PM - 08 PM</span>
                             <span class="title">Coming Soon... </span>
                           </div>
                         </h3>
@@ -956,7 +961,7 @@
                             <img src="assets/images/schedule-2.jpg" alt="" />
                           </div>
                           <div class="event-title">
-                            <span class="time">11 AM - 01 AM</span>
+                            <span class="time">08 PM - 09 PM</span>
                             <span class="title">Coming Soon...</span>
                           </div>
                         </h3>
@@ -971,7 +976,7 @@
                             <img src="assets/images/schedule-3.jpg" alt="" />
                           </div>
                           <div class="event-title">
-                            <span class="time">01 AM - 02 AM</span>
+                            <span class="time">09 PM - 10 PM</span>
                             <span class="title">Coming Soon... </span>
                           </div>
                         </h3>
@@ -985,7 +990,7 @@
                             <img src="assets/images/schedule-3.jpg" alt="" />
                           </div>
                           <div class="event-title">
-                            <span class="time">02 AM - 04 AM</span>
+                            <span class="time">10 PM - 11 PM</span>
                             <span class="title">Coming Soon... </span>
                           </div>
                         </h3>
@@ -1932,8 +1937,8 @@
                       <!-- Footer Info Start -->
                       <div class="footer-info">
                         <h3 class="title">Event Details</h3>
-                        <span class="date">coming soon... </span>
-                        <p>Eskişehir</p>
+                        <span class="date">22 August</span>
+                        <p>IBW Side Event</p>
                         <div class="footer-widget-social">
                           <a href="https://www.instagram.com/cankayablockchain/"
                             ><i class="fab fa-instagram"></i
