--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -442,8 +442,8 @@
                 <!-- Single Counter Start -->
                 <div class="single-counter counter-item-3 text-center">
                   <div class="counter-text">
-                    <span class="counter">1</span>
-                    <p>Workshop</p>
+                    <span class="counter">1M </span>
+                    <p>Views</p>
                   </div>
                 </div>
                 <!-- Single Counter End -->
