--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -442,7 +442,7 @@
                 <!-- Single Counter Start -->
                 <div class="single-counter counter-item-3 text-center">
                   <div class="counter-text">
-                    <span class="counter">1M </span>
+                    <span class="counter">1000000</span>
                     <p>Views</p>
                   </div>
                 </div>
